build/kubernetes/_base/call/pod-routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-0
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-0
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-1
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-1
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-2
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-2
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-3
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-3
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-4
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-4
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-5
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-5
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-6
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-6
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-7
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-7
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-8
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-8
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ${RESOURCE_PREFIX}call-pod-9
  namespace: ${NAMESPACE}
  labels:
    app: ${RESOURCE_PREFIX}call-worker
    environment: ${ENVIRONMENT}
    component: call
spec:
  selector:
    statefulset.kubernetes.io/pod-name: ${RESOURCE_PREFIX}call-worker-9
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${RESOURCE_PREFIX}call-pod-ingress
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${CALL_DOMAIN}
      secretName: ${RESOURCE_PREFIX}call-certificate
  rules:
    - host: ${CALL_DOMAIN}
      http:
        paths:
          - path: /pod/0(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-0
                port:
                  number: 80
          - path: /pod/1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-1
                port:
                  number: 80
          - path: /pod/2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-2
                port:
                  number: 80
          - path: /pod/3(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-3
                port:
                  number: 80
          - path: /pod/4(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-4
                port:
                  number: 80
          - path: /pod/5(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-5
                port:
                  number: 80
          - path: /pod/6(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-6
                port:
                  number: 80
          - path: /pod/7(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-7
                port:
                  number: 80
          - path: /pod/8(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-8
                port:
                  number: 80
          - path: /pod/9(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${RESOURCE_PREFIX}call-pod-9
                port:
                  number: 80
